# akvakulturregisteret_rs

./: Cargo.toml  GEN.md  README.md  dist-workspace.toml
.openapi-generator/: FILES
docs/: Address.md  AreaListItem.md  AreaPlacement.md  AreaResourceApi.md  BorderPoint.md  BorderType.md  BusinessType.md  CapacityInfo.md  CsvDumpResourceApi.md  Entity.md  EntityResourceApi.md  ErrorResponse.md  FishCode.md  GrantInfo.md  IntentionType.md  LatestLicenseSiteConnectionDetail.md  LatestLicenseSiteConnectionOverview.md  LicenseCapacityHistory.md  LicenseConnectionForSite.md  LicenseDecision.md  LicenseDetail.md  LicenseOverview.md  LicensePortfolioType.md  LicenseResourceApi.md  LicenseTransfers.md  LicenseTypeDetail.md  LicenseTypeOverview.md  LicenseTypeResourceApi.md  Lien.md  LienHolders.md  Lienholder.md  RegisteredLicenseOwner.md  Site.md  SiteBorder.md  SiteConnectionForLicense.md  SiteDecision.md  SiteForLegalEntity.md  SiteResourceApi.md  SpeciesDetail.md  SpeciesOverview.md  (+3 more)
src/: lib.rs
src/apis/: area_resource_api.rs  configuration.rs  csv_dump_resource_api.rs  entity_resource_api.rs  license_resource_api.rs  license_type_resource_api.rs  mod.rs  site_resource_api.rs
src/models/: address.rs  area_list_item.rs  area_placement.rs  border_point.rs  border_type.rs  business_type.rs  capacity_info.rs  entity.rs  error_response.rs  fish_code.rs  grant_info.rs  intention_type.rs  latest_license_site_connection_detail.rs  latest_license_site_connection_overview.rs  license_capacity_history.rs  license_connection_for_site.rs  license_decision.rs  license_detail.rs  license_overview.rs  license_portfolio_type.rs  license_transfers.rs  license_type_detail.rs  license_type_overview.rs  lien.rs  lien_holders.rs  lienholder.rs  mod.rs  registered_license_owner.rs  site.rs  site_border.rs  site_connection_for_license.rs  site_decision.rs  site_for_legal_entity.rs  species_detail.rs  species_overview.rs  transfer.rs  version_detail.rs  version_overview.rs
wix/: main.wxs
