[package]
name = "akvakulturregisteret_rs"
version = "1.0.0"
authors = ["akva-hjelp@fiskeridir.no"]
description = "API for det nye offentlige Akvakulturregisteret"
license = "FDIR data usage license"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
mockall = { version = "^0.13", optional = true}
bon = { version = "2.3", optional = true }
clap = { version = "4.4", features = ["derive"],  optional = true }
tokio = { version = "1.0", features = ["full"],  optional = true }
csv = "1.3.1"

[features]
default = ["mockall", "bon", "tokio", "clap"]
mockall = ["dep:mockall"]
bon = ["dep:bon"]
tokio = ["dep:tokio"]
clap = ["dep:clap"]

[[bin]]
name = "areg"
path = "bin/cli.rs"
required-features = ["clap", "tokio"]


